--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
@@ -16,125 +15,135 @@
 	max-width: $desktop_width;
 	background-color: grey;
 }
-
 // about NW School Sectio
 .about-school {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin*7.8;
 }
 // Members List Section
+
 .members-list {
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
 	flex-direction: column;
 	@include desktop {
-			flex-direction: column;
+		flex-direction: column;
 	};
+
 	.members-grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
 		@include desktop {
-				flex-direction:row;
+			flex-direction: row;
 		};
 
 		.members-block {
 			flex: 33%;
 			display: flex;
-		  align-items: center;
+			align-items: center;
 			flex-direction: column;
 			@include desktop {
 				max-width: 990px;
-					flex: 1;
+				flex: 1;
 			};
 		}
-	.flip-container {
-		display: block;
-		box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
-		background: #aff1d3;
-		border-radius: 50%;
 
-		.flipper {
-			flex: 1 0 auto;
-			display: flex;
-			width: 50%;
-			position: relative;
-			-webkit-transition: 1.9s;
-			-webkit-transform-style: preserve-3d;
-			-moz-transition: 1.9s;
-			-moz-transform-style: preserve-3d;
-			transition: 1.9s;
-			transform-style: preserve-3d;
-			.members_det {
-				display: block;
-			}
-			p {
-				font-size: 1rem;
-				font-style: italic;
-				line-height:$basic_hline_height*2.4 ;
-			}
-		}
-
-		.front {
-			position: absolute;
-			background-size: cover;
+		.flip-container {
+			display: block;
+			box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
+			background: #aff1d3;
 			border-radius: 50%;
-			flex: 2;
-			img {
+
+			.flipper {
+				flex: 1 0 auto;
+				display: flex;
+				width: 50%;
+				position: relative;
+				-webkit-transition: 1.9s;
+				-webkit-transform-style: preserve-3d;
+				-moz-transition: 1.9s;
+				-moz-transform-style: preserve-3d;
+				transition: 1.9s;
+				transform-style: preserve-3d;
+
+				.members_det {
+					display: block;
+				}
+
+				p {
+					font-size: 1rem;
+					font-style: italic;
+					line-height: $basic_hline_height*2.4;
+				}
+			}
+
+			.front {
+				position: absolute;
+				background-size: cover;
 				border-radius: 50%;
+				flex: 2;
+
+				img {
+					border-radius: 50%;
+				}
+			}
+
+			.back {
+				border-radius: 50%;
+				position: absolute;
+				width: 125px;
+				text-overflow: ellipsis;
+				height: 125px;
+				text-align: center;
+				right: 3px;
+				-webkit-transform: rotateY(180deg);
+				-moz-transform: rotateY(180deg);
+				transform: rotateY(180deg);
+				@include desktop {
+					width: 200px;
+					height: 200px;
+					right: 4px;
+					top: 55px;
+				};
 			}
 		}
-		.back {
-			border-radius: 50%;
-			position: absolute;
-			width: 125px;
-			text-overflow: ellipsis;
-			height: 125px;
-			text-align: center;
-			right: 3px;
+
+		.flip-container.hover .flipper,
+		.flip-container:hover .flipper {
 			-webkit-transform: rotateY(180deg);
 			-moz-transform: rotateY(180deg);
 			transform: rotateY(180deg);
-			@include desktop{
+		}
+
+		.back,
+		.flip-container,
+		.front {
+			width: 125px;
+			height: 125px;
+			@media screen and (min-width: 650px) {
+				width: 190px;
+				height: 190px;
+			};
+			@include desktop {
 				width: 200px;
 				height: 200px;
-				right: 4px;
-				top:55px;
-			} ;
+			};
+		}
+
+		.back,
+		.front {
+			-webkit-backface-visibility: hidden;
+			-moz-backface-visibility: hidden;
+			backface-visibility: hidden;
+		}
+
+		.members_det {
+			text-align: center;
+			// font-size: $font_member_staff;
 		}
 	}
-	.flip-container.hover .flipper,
-	.flip-container:hover .flipper {
-		-webkit-transform: rotateY(180deg);
-		-moz-transform: rotateY(180deg);
-		transform: rotateY(180deg);
-	}
-	.back,
-	.flip-container,
-	.front {
-		width: 125px;
-		height: 125px;
-		 @media screen and (min-width: 650px){
-			width: 190px;
-			height: 190px;
-		};
-		@include desktop{
-			width: 200px;
-			height: 200px;
-		} ;
-	}
-	.back,
-	.front {
-		-webkit-backface-visibility: hidden;
-		-moz-backface-visibility: hidden;
-		backface-visibility: hidden;
-	}
-	.members_det {
-		text-align: center;
-		// font-size: $font_member_staff;
-	}
-}
 }
 // Members at Large Section
 
@@ -144,32 +153,37 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
 	.members_at_large-grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-		@include desktop{
+		@include desktop {
 			flex-wrap: nowrap;
 		};
+
 		.members_at_large-name {
 			font-size: $font_member_staff;
 			justify-content: center;
 			display: flex;
-		  padding: .2rem;
+			padding: 0.2rem;
 			text-align: center;
 			margin: 1rem;
 		}
 	}
 }
 // Meeting Minutes & Archive Section
+
 .meeting-minutes {
 	display: flex;
 	flex-direction: column;
 	padding-bottom: $basic_margin*5.5;
 	border-bottom: solid 3px $color_btn_green;
+
 	.news-img img {
 		width: 100%;
 	}
+
 	.red-more {
 		align-self: flex-end;
 	}
@@ -180,18 +194,22 @@
 	display: flex;
 	flex-direction: column;
 }
+
 .archive-sec {
-display: flex;
-justify-content: space-between;
-.arch-btn{
-	order: 1;
-	align-self: flex-start;
-	.green-btn{
-		font-size: 1.25rem;
+	display: flex;
+	justify-content: space-between;
+
+	.arch-btn {
+		order: 1;
+		align-self: flex-start;
+
+		.green-btn {
+			font-size: 1.25rem;
+		}
 	}
-}
-.arch-block{
-	width: 55%;
-	border-top:solid 3px $color_btn_green;
-}
+
+	.arch-block {
+		width: 55%;
+		border-top: solid 3px $color_btn_green;
+	}
 }
