--- a/themes/montessori-theme/sass/_error-page.scss
+++ b/themes/montessori-theme/sass/_error-page.scss
@@ -1,79 +1,94 @@
-
 /*--------------------------- # 404 page --------------------------*/
-
 @keyframes pulsate {
-    0% {transform: scale(0.1, 0.1); opacity: 0.0;
-    		box-shadow: 0 0 0 1rem rgba(108,196,23,.2),0 0 0 2rem rgba(108,196,23,.15),0 0 0 4rem rgba(108,196,23,.2);
+    0% {
+        transform: scale(0.1, 0.1);
+        opacity: 0.0;
+        box-shadow: 0 0 0 1rem rgba(108,196,23,.2),0 0 0 2rem rgba(108,196,23,.15),0 0 0 4rem rgba(108,196,23,.2);
     }
-    50% {opacity: 1.0;
-    		box-shadow: 0 0 0 1.25rem rgba(108,196,23,.2),0 0 0 2.75rem rgba(108,196,23,.1),0 0 0 5rem rgba(108,196,23,0);
-    }
-    75% {
-    box-shadow: 0 0 0 1.5rem rgba(108,196,23,.2),0 0 0 3rem rgba(108,196,23,0),0 0 0 6rem rgba(108,196,23,0);}
 
-    100% {transform: scale(1.5, 1.5); opacity: 0.0;
-    			box-shadow: 0 0 0 1.75rem rgba(108,196,23,0),0 0 0 3.75rem rgba(108,196,23,0),0 0 0 7rem rgba(108,196,23,0);
+    50% {
+        opacity: 1.0;
+        box-shadow: 0 0 0 1.25rem rgba(108,196,23,.2),0 0 0 2.75rem rgba(108,196,23,.1),0 0 0 5rem rgba(108,196,23,0);
+    }
+
+    75% {
+        box-shadow: 0 0 0 1.5rem rgba(108,196,23,.2),0 0 0 3rem rgba(108,196,23,0),0 0 0 6rem rgba(108,196,23,0);
+    }
+
+    100% {
+        transform: scale(1.5, 1.5);
+        opacity: 0.0;
+        box-shadow: 0 0 0 1.75rem rgba(108,196,23,0),0 0 0 3.75rem rgba(108,196,23,0),0 0 0 7rem rgba(108,196,23,0);
     }
 }
-
 @keyframes pulsatetwo {
-    0% {transform: scale(0.1, 0.1); opacity: 0.0;
-    		box-shadow: 0 0 0 1rem rgba(108,196,23,.2),0 0 0 2rem rgba(108,196,23,.15),0 0 0 4rem rgba(108,196,23,.2);
+    0% {
+        transform: scale(0.1, 0.1);
+        opacity: 0.0;
+        box-shadow: 0 0 0 1rem rgba(108,196,23,.2),0 0 0 2rem rgba(108,196,23,.15),0 0 0 4rem rgba(108,196,23,.2);
     }
-    50% {opacity: 1.0;
-    		box-shadow: 0 0 0 1.25rem rgba(108,196,23,.2),0 0 0 2.75rem rgba(108,196,23,.1),0 0 0 5rem rgba(108,196,23,0);
-    }
-    75% {
-    box-shadow: 0 0 0 1.5rem rgba(108,196,23,.2),0 0 0 3rem rgba(108,196,23,0),0 0 0 6rem rgba(108,196,23,0);}
 
-    100% {transform: scale(3, 3); opacity: 0.8;
-    			box-shadow: 0 0 0 1.75rem rgba(108,196,23,0),0 0 0 3.75rem rgba(108,196,23,0),0 0 0 7rem rgba(108,196,23,0);
+    50% {
+        opacity: 1.0;
+        box-shadow: 0 0 0 1.25rem rgba(108,196,23,.2),0 0 0 2.75rem rgba(108,196,23,.1),0 0 0 5rem rgba(108,196,23,0);
+    }
+
+    75% {
+        box-shadow: 0 0 0 1.5rem rgba(108,196,23,.2),0 0 0 3rem rgba(108,196,23,0),0 0 0 6rem rgba(108,196,23,0);
+    }
+
+    100% {
+        transform: scale(3, 3);
+        opacity: 0.8;
+        box-shadow: 0 0 0 1.75rem rgba(108,196,23,0),0 0 0 3.75rem rgba(108,196,23,0),0 0 0 7rem rgba(108,196,23,0);
     }
 }
 
 .error-404 {
-  padding-top: 0px;
-	position: relative;
-	min-height: 100vh;
-	width: 100%;
-	background: -webkit-linear-gradient(rgb(9, 23, 4),rgba(0,0,0,.7)),url(https://wallpaperscraft.com/image/green_yellow_lines_light_131_1920x1080.jpg);
-	background-size: cover;
-	background-position: center;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	.title{
-		color: #4fc8a1;
-		text-transform: uppercase;
-		font-family: 'Orbitron', sans-serif;
-		font-weight: 900;
-		font-size: 50px;
-		text-shadow:0 1px 0 #fff;
-		padding: 10px;
-    line-height: 75px;
-    text-align: center;
-	}
-    h2{
-    color: #4fc8a1;
-    min-height: 200px;
+    padding-top: 0;
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    background: -webkit-linear-gradient(rgb(9, 23, 4),rgba(0,0,0,.7)),url(https://wallpaperscraft.com/image/green_yellow_lines_light_131_1920x1080.jpg);
+    background-size: cover;
+    background-position: center;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-  }
+
+    .title {
+        color: #4fc8a1;
+        text-transform: uppercase;
+        font-family: 'Orbitron', sans-serif;
+        font-weight: 900;
+        font-size: 50px;
+        text-shadow: 0 1px 0 #fff;
+        padding: 10px;
+        line-height: 75px;
+        text-align: center;
+    }
+
+    h2 {
+        color: #4fc8a1;
+        min-height: 200px;
+        display: flex;
+        align-items: center;
+    }
 }
 
-.btn-return{
-	width: 70px;
-	height: 70px;
-	border-radius: 50%;
-	animation: pulsate 3.5s ease-out;
-  animation-iteration-count: infinite;
-  flex-basis: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	&:hover{
-		background-color: #142806;
-	}
+.btn-return {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    animation: pulsate 3.5s ease-out;
+    animation-iteration-count: infinite;
+    flex-basis: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+        background-color: #142806;
+    }
 }
