--- a/themes/montessori-theme/sass/_forms.scss
+++ b/themes/montessori-theme/sass/_forms.scss
@@ -1,9 +1,7 @@
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-
 /* Buttons */
-
 button,
 input[type="button"],
 input[type="reset"],
@@ -16,7 +14,7 @@ input[type="submit"] {
 	color: rgba(0, 0, 0, .8);
 	@include font-size(0.75);
 	line-height: 1;
-	padding: .6em 1em .4em;
+	padding: 0.6em 1em 0.4em;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 
 	&:hover {
@@ -30,14 +28,12 @@ input[type="submit"] {
 		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
 	}
 }
-
 /* Fields */
-
-input[type="text"],
 input[type="email"],
-input[type="url"],
 input[type="password"],
 input[type="search"],
+input[type="text"],
+input[type="url"],
 textarea {
 	color: #666;
 	border: 1px solid #ccc;
@@ -48,11 +44,11 @@ textarea {
 	}
 }
 
-input[type="text"],
 input[type="email"],
-input[type="url"],
 input[type="password"],
-input[type="search"] {
+input[type="search"],
+input[type="text"],
+input[type="url"] {
 	padding: 3px;
 }
 
