--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,17 +1,19 @@
 //-------------------front page---------------------------//
 // media screen for mobile (max-width: 480px)
+
 .site-main {
     .home {
         width: 100%;
         height: auto;
-         margin: 0 auto;
-         @include desktop{
-            padding: 0px 90px;
-         }
         margin: 0 auto;
         @include desktop {
             padding: 0 90px;
         }
+        margin: 0 auto;
+        @include desktop {
+            padding: 0 90px;
+        }
+
         .home-wrapper {
             width: 480px;
             height: 585px;
@@ -22,16 +24,17 @@
                 background-color: rgba(0,0,0,0.74);
                 position: relative;
             }
+
             .home-img {
                 @include desktop {
                     background-color: rgba(0,0,0,0.74);
                     width: 1264px;
                     height: 555px;
                     z-index: -1;
-
                     position: absolute;
                 }
             }
+
             h2 {
                 font-family: 'Asap';
                 font-size: 36px;
@@ -50,6 +53,7 @@
                     line-height: 0;
                 }
             }
+
             p {
                 height: 160px;
                 font-family: "Noto Sans";
@@ -65,6 +69,7 @@
                     line-height: 46px;
                 }
             }
+
             .red-btn {
                 background-color: #F76072;
                 border-radius: 6px;
@@ -107,6 +112,7 @@
             }
         }
     }
+
     .links-wrapper {
         width: 480px;
         @include desktop {
@@ -115,6 +121,7 @@
             margin: 20px -60px;
             padding-top: 70px;
         }
+
         p {
             width: 377px;
             font-family: "Noto Sans";
@@ -127,6 +134,7 @@
                 margin: 15px 40px;
             }
         }
+
         .benifits {
             .green-btn {
                 background-color: #4FC8A1;
@@ -150,6 +158,7 @@
                 }
             }
         }
+
         .nw-program-page {
             .green-btn {
                 background-color: #4FC8A1;
@@ -173,6 +182,7 @@
                 }
             }
         }
+
         .involved {
             .red-btn {
                 padding: 17px 70px;
@@ -198,8 +208,10 @@
     .support-wrapper {
         width: 100%;
         height: auto;
+
         .information {
             height: auto;
+
             h2 {
                 border-top: 2px solid #2EB688;
                 width: 377px;
@@ -220,60 +232,25 @@
                     width: 1283px;
                 }
             }
-            .support-img-wrapper{
-                height: auto;
-                @include desktop{
-                height: 0;
-                }
 
-            img {
-                margin: 0px 6rem;
-                // width: 287px;
-                // height: 470px;
-                @include desktop {
-                    display: flex;
-                    top: 82rem;
-                    position: absolute;
-                    right: 35px;
-                }
-            }
-
-            p {
-                text-align: center;
-                // height: auto;
-                @include desktop {
-                   display: flex;
-                    top: 18rem;
-                    position: relative;
-                    right: -950px;
-                    width: 25%;
-                }
-            }
-        } //support-wrapper
-
-        blockquote {
-            border-left: 6px solid #D93B57;
-            font-size: 25px;
-            margin-bottom: 95px;
-            height: 125px;
-                @include desktop{
             .support-img-wrapper {
-                // height: auto;
+                height: auto;
                 @include desktop {
                     height: 0;
                 }
+
                 img {
                     margin: 0 6rem;
                     // width: 287px;
                     // height: 470px;
                     @include desktop {
-                        height: auto;
                         display: flex;
-                        top: -13rem;
+                        top: 82rem;
                         position: absolute;
                         right: 35px;
                     }
                 }
+
                 p {
                     text-align: center;
                     // height: auto;
@@ -287,183 +264,239 @@
                 }
             }
             //support-wrapper
+
             blockquote {
                 border-left: 6px solid #D93B57;
                 font-size: 25px;
                 margin-bottom: 95px;
                 height: 125px;
                 @include desktop {
-                    border-left: 6px solid #D93B57;
-                    margin: 27px 119px;
-                    width: 70%;
-                    height: auto;
-                p {
-                    font-size: 24px;
-                }
-            }
-        }
-            p {
-                width: 377px;
-                font-family: "Noto Sans";
-                font-size: 20px;
-                line-height: 46px;
-                color: #000;
-                margin: 40px;
-                @include desktop {
-                    width: 61%;
-                    font-family: Noto Sans;
-                    font-size: 22px;
-                    line-height: 47px;
-                    letter-spacing: .9px;
-                    margin: 30px 40px;
+                    .support-img-wrapper {
+                        // height: auto;
+                        @include desktop {
+                            height: 0;
+                        }
+
+                        img {
+                            margin: 0 6rem;
+                            // width: 287px;
+                            // height: 470px;
+                            @include desktop {
+                                height: auto;
+                                display: flex;
+                                top: -13rem;
+                                position: absolute;
+                                right: 35px;
+                            }
+                        }
+
+                        p {
+                            text-align: center;
+                            // height: auto;
+                            @include desktop {
+                                display: flex;
+                                top: 18rem;
+                                position: relative;
+                                right: -950px;
+                                width: 25%;
+                            }
+                        }
+                    }
+                    //support-wrapper
+                    blockquote {
+                        border-left: 6px solid #D93B57;
+                        font-size: 25px;
+                        margin-bottom: 95px;
+                        height: 125px;
+                        @include desktop {
+                            border-left: 6px solid #D93B57;
+                            margin: 27px 119px;
+                            width: 70%;
+                            height: auto;
+
+                            p {
+                                font-size: 24px;
+                            }
+                        }
                     }
 
-                .info {
-                    width: 470px;
-                    // height: 294px;
-                    font-family: "Noto Sans";
-                    font-size: 26px;
-                    font-weight: bold;
-                    line-height: 42px;
-                    color: #000;
-                }
-            }
-            //p
-            .red-btn {
-                width: 185px;
-                height: 47px;
-                background-color: #F76072;
-                border-color: #F76072;
-                border-radius: 6px;
-                color: #fff;
-                margin-left: 20px;
-                padding: 8px;
-                font-family: "Noto Sans";
-                font-size: 20px;
-                font-weight: 300;
-                letter-spacing: 0.8px;
-                // width: 200px;
-                height: 47px;
-                display: flex;
-            }
-            .green-btn {
-                background-color: #4FC8A1;
-                border-color: #4FC8A1;
-                border-radius: 6px;
-                font-family: "Noto Sans";
-                font-size: 20px;
-                font-weight: bold;
-                text-align: center;
-                line-height: 30px;
-                color: #fff;
-                margin-left: 20px;
-                padding: 8px;
-                font-weight: 300;
-                letter-spacing: 0.8px;
-                height: 47px;
-                width: 185px;
-                display: flex;
-            }
-        }
-        //information
-    }
-    //support-wrapper
+                    p {
+                        width: 377px;
+                        font-family: "Noto Sans";
+                        font-size: 20px;
+                        line-height: 46px;
+                        color: #000;
+                        margin: 40px;
+                        @include desktop {
+                            width: 61%;
+                            font-family: Noto Sans;
+                            font-size: 22px;
+                            line-height: 47px;
+                            letter-spacing: 0.9px;
+                            margin: 30px 40px;
+                        }
 
-// this is for the features fliper
-    .all-features {
-        margin-bottom: 30px;
-        h2 {
-            box-sizing: border-box;
-            width: 440px;
-            border-top: 2px solid #2EB688;
-            padding-top: 50px;
-            height: 42px;
-            font-family: 'Asap';
-            font-size: 36px;
-            line-height: 0;
-            color: #000;
-            margin-left: 30px;
-            .container {
-                margin-left: auto;
-                margin-right: auto;
-                width: 480px;
+                        .info {
+                            width: 470px;
+                            // height: 294px;
+                            font-family: "Noto Sans";
+                            font-size: 26px;
+                            font-weight: bold;
+                            line-height: 42px;
+                            color: #000;
+                        }
+                    }
+                    //p
+                    .red-btn {
+                        width: 185px;
+                        height: 47px;
+                        background-color: #F76072;
+                        border-color: #F76072;
+                        border-radius: 6px;
+                        color: #fff;
+                        margin-left: 20px;
+                        padding: 8px;
+                        font-family: "Noto Sans";
+                        font-size: 20px;
+                        font-weight: 300;
+                        letter-spacing: 0.8px;
+                        // width: 200px;
+                        height: 47px;
+                        display: flex;
+                    }
+
+                    .green-btn {
+                        background-color: #4FC8A1;
+                        border-color: #4FC8A1;
+                        border-radius: 6px;
+                        font-family: "Noto Sans";
+                        font-size: 20px;
+                        font-weight: bold;
+                        text-align: center;
+                        line-height: 30px;
+                        color: #fff;
+                        margin-left: 20px;
+                        padding: 8px;
+                        font-weight: 300;
+                        letter-spacing: 0.8px;
+                        height: 47px;
+                        width: 185px;
+                        display: flex;
+                    }
+                }
+                //information
+            }
+            //support-wrapper
+            // this is for the features fliper
+            .all-features {
+                margin-bottom: 30px;
+
+                h2 {
+                    box-sizing: border-box;
+                    width: 440px;
+                    border-top: 2px solid #2EB688;
+                    padding-top: 50px;
+                    height: 42px;
+                    font-family: 'Asap';
+                    font-size: 36px;
+                    line-height: 0;
+                    color: #000;
+                    margin-left: 30px;
+
+                    .container {
+                        margin-left: auto;
+                        margin-right: auto;
+                        width: 480px;
+                    }
+                }
+
+                .features-wrapper {
+                    /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
+                    background: #aff1d3;
+                    width: 200px;
+                    box-sizing: border-box;
+                    height: 139.76px;
+                    width: 480.27px;
+                    position: relative;
+                    border-radius: 10px;
+                    font-family: 'Noto Sans';
+                    font-size: 15px;
+                    color: #000;
+                    text-decoration: none;
+
+                    .features-flipper {
+                        position: relative;
+                        -webkit-transition: 1.9s;
+                        -webkit-transform-style: preserve-3d;
+                        -moz-transition: 1.9s;
+                        -moz-transform-style: preserve-3d;
+                        -o-transition: 1.9s;
+                        -o-transform-style: preserve-3d;
+                        transition: 1.9s;
+                        transform-style: preserve-3d;
+                        justify-content: space-around;
+                        flex-direction: row;
+
+                        &:hover {
+                            -webkit-transform: rotateY(180deg);
+                            -moz-transform: rotateY(180deg);
+                            -o-transform: rotateY(180deg);
+                            transform: rotateY(180deg);
+                            cursor: pointer;
+                        }
+
+                        .front {
+                            height: auto;
+                            text-align: center;
+                            overflow: hidden;
+                            padding: 20px;
+                            width: 450px;
+                            font-family: 'Asap';
+                            font-size: 24px;
+                            text-align: center;
+                            color: #000000;
+                            -webkit-backface-visibility: hidden;
+                            -moz-backface-visibility: hidden;
+                            -o-backface-visibility: hidden;
+                            backface-visibility: hidden;
+                        }
+
+                        .features-back {
+                            // width: 480px;
+                            // height: 170px;
+                            border: 1px solid #248E6A;
+                            margin: 0;
+                            text-align: center;
+                            overflow: hidden;
+                            padding: 0;
+                            -webkit-backface-visibility: hidden;
+                            -moz-backface-visibility: hidden;
+                            -o-backface-visibility: hidden;
+                            backface-visibility: hidden;
+                            position: absolute;
+                            bottom: 1px;
+                            background-color: #fff;
+                            -webkit-transform: rotateY(180deg);
+                            -moz-transform: rotateY(180deg);
+                            -o-transform: rotateY(180deg);
+                            transform: rotateY(180deg);
+                        }
+                    }
+                }
+
+                .green-btn {
+                    color: #248E6A;
+                    text-decoration: none;
+                }
             }
         }
-        .features-wrapper {
-            /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
-            background: #aff1d3;
-            width: 200px;
-            box-sizing: border-box;
-            height: 139.76px;
-            width: 480.27px;
-            position: relative;
-            border-radius: 10px;
-            font-family: 'Noto Sans';
-            font-size: 15px;
-            color: #000;
+
+        a {
             text-decoration: none;
-            .features-flipper {
-                position: relative;
-                -webkit-transition: 1.9s;
-                -webkit-transform-style: preserve-3d;
-                -moz-transition: 1.9s;
-                -moz-transform-style: preserve-3d;
-                -o-transition: 1.9s;
-                -o-transform-style: preserve-3d;
-                transition: 1.9s;
-                transform-style: preserve-3d;
-                justify-content: space-around;
-                flex-direction: row;
-                &:hover {
-                    -webkit-transform: rotateY(180deg);
-                    -moz-transform: rotateY(180deg);
-                    -o-transform: rotateY(180deg);
-                    transform: rotateY(180deg);
-                    cursor: pointer;
-                }
-                .front {
-                    height: auto;
-                    text-align: center;
-                    overflow: hidden;
-                    padding: 20px;
-                    width: 450px;
-                    font-family: 'Asap';
-                    font-size: 24px;
-                    text-align: center;
-                    color: #000000;
-                    -webkit-backface-visibility: hidden;
-                    -moz-backface-visibility: hidden;
-                    -o-backface-visibility: hidden;
-                    backface-visibility: hidden;
-                }
-                .features-back {
-                    // width: 480px;
-                    // height: 170px;
-                    border: 1px solid #248E6A;
-                    margin: 0;
-                    text-align: center;
-                    overflow: hidden;
-                    padding: 0;
-                    -webkit-backface-visibility: hidden;
-                    -moz-backface-visibility: hidden;
-                    -o-backface-visibility: hidden;
-                    backface-visibility: hidden;
-                    position: absolute;
-                    bottom: 1px;
-                    background-color: #fff;
-                    -webkit-transform: rotateY(180deg);
-                    -moz-transform: rotateY(180deg);
-                    -o-transform: rotateY(180deg);
-                    transform: rotateY(180deg);
-    }}}
-        .green-btn {
-            color: #248E6A;
-            text-decoration: none;
-    }}
+        }
+    }
 }
-a {
-    text-decoration: none;
-    }} }
+
 body {
     background-color: #ffffff;
 }
