--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -1,37 +1,40 @@
 ///**** The Header ***/////
-.masthead{
+
+.masthead {
 	position: absolute;
 }
+
 .site-content {
 	padding-top: 160px;
 	top: 0;
 }
-.home .site-content{
-	padding-top: 0px;@include desktop{
+
+.home .site-content {
+	padding-top: 0;
+	@include desktop {
 		padding-top: 140px;
 	};
 }
-
 ///the second part between two menues///
 
-.the-page-title{
-
+.the-page-title {
 	background-color: $white;
 	height: 40px;
-	ul{display: flex;
+
+	ul {
+		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
 		position: relative;
 
-	li{
-		display: inline-block;
-	}}
-	@include desktop{
-display: none;
+		li {
+			display: inline-block;
+		}
+	}
+	@include desktop {
+		display: none;
 	};
 }
-
-
 /////****Start Main Menu**** ////
 
 .main-navigation-container {
@@ -46,6 +49,7 @@ display: none;
 div .menu-primary-menu-container {
 	width: 100%;
 }
+
 .main-navigation {
 	min-width: 70%;
 }
@@ -72,17 +76,14 @@ div .menu-primary-menu-container {
 	font-family: $font_header_footer;
 	@include flex(center,space-between);
 	height: 5rem;
-
-		display: inline-block;//
-		height: 8rem;//
-		padding: 0 15px;//
-
+	display: inline-block; //
+	height: 8rem; //
+	padding: 0 15px; //
 }
 
 .menu-primary-menu-container {
 	@include desktop {
-
-    white-space:nowrap;
+		white-space: nowrap;
 		display: inline-block;
 
 		ul {
@@ -91,14 +92,13 @@ div .menu-primary-menu-container {
 
 				a {
 					text-transform: uppercase;
-    text-decoration: none;
-    color: #000;
-    color: #231f20;
-    font-size: 1.2rem;
-    border-top: 6px solid transparent;
-    list-style: none;
-    padding: 15px 5px;
-
+					text-decoration: none;
+					color: #000;
+					color: #231f20;
+					font-size: 1.2rem;
+					border-top: 6px solid transparent;
+					list-style: none;
+					padding: 15px 5px;
 				}
 			}
 		}
@@ -164,10 +164,10 @@ button#responsive-menu-button {
 		@include desktop {
 			height: 100px;
 			width: 300px;
-			padding-top: 0px;
-			margin-top: 0px;
-
+			padding-top: 0;
+			margin-top: 0;
 		}
+
 		a {
 			bottom: -20px;
 			cursor: pointer;
@@ -177,109 +177,85 @@ button#responsive-menu-button {
 	}
 }
 
-.main-menu-wrapper{
-
-	@include desktop{
-
-	};
+.main-menu-wrapper {
+	@include desktop {};
 }
+
 .main-menu-wrapper {
 	border-bottom: 2px solid #E2E2E2;
 	width: 100%;
 	height: 80px;
 	@include flex(center,space-between);
 	@include desktop {
-		border-bottom:none;
+		border-bottom: none;
 		height: 90px;
 	}
 }
 
 .site-header {
 	z-index: 999;
-	min-width:380px;
+	min-width: 380px;
 	width: 100%;
 	background: $white;
-	position: absolute;@include desktop{
+	position: absolute;
+	@include desktop {
 		position: fixed;
 	};
 	top: 0;
 }
 
 .home .site-header {
-	padding-top:0;
-
+	padding-top: 0;
 	position: absolute;
 }
 ////**Sub Menu Section**/////
 
-.back-to-top{
+.back-to-top {
 	position: absolute;
 	left: 0;
-margin-right: 30px;
-}
-
-
-div {
-	position: relative;
-
-	.secondary li:nth-child(3) a {
-		border-left: solid 1px white;
-		border-right: solid 1px white;
+	margin-right: 30px;
+	a{
+		visibility:hidden;
+		@include desktop{
+			visibility:visible;
+		};
 	}
-}
-
-div {
-	position: relative;
-
-	.secondary li:nth-child(4) a {
-		padding: 0 20px;
-		border-left: solid 1px white;
-		border-right: solid 1px white;
-	}
-}
-.secondary li:nth-child(2) {
-	margin-left: 70px;
 }
 
 div {
 	.secondary li a {
-		padding: 0 5px;
 		line-height: 2.3rem;
-		@include desktop{
-			line-height: 2.3rem
+		@include desktop {
+			line-height: 2.3rem;
 		};
 	}
 }
+
 div .secondary {
-	position: relative;
-
-
-
 	font-family: $font_header_footer;
 	@include desktop {
 		text-align: right;
-		padding:8px 10px;
+		padding: 0px 10px;
 		height: 70px;
 		margin-top: 40px;
 	}
 	text-align: center;
-	padding-right:5px;
-
+	padding-right: 5px;
 	background-color: #248E6A;
 
 	& .active {
 		background-color: $color_btn_green;
 	}
-	ul{
 
-		min-width:50%;
+	ul {
+		min-width: 50%;
 	}
 
 	li {
 		display: inline-block;
-		padding: 7px 10px;
+		padding: 8px 8px;
 		@include desktop {
-			padding: 7px 15px;
+	 padding: 16px 15px;
 		};
 
 		a {
