--- a/themes/montessori-theme/sass/_media.scss
+++ b/themes/montessori-theme/sass/_media.scss
@@ -1,28 +1,23 @@
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
-
-.page-content .wp-smiley,
+.comment-content .wp-smiley,
 .entry-content .wp-smiley,
-.comment-content .wp-smiley {
+.page-content .wp-smiley {
 	border: none;
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 0;
 }
-
 /* Make sure embeds and iframes fit their containers. */
-
 embed,
 iframe,
 object {
 	max-width: 100%;
 }
-
 /* Captions */
-
 .wp-caption {
-	margin-bottom:$base_spacing_normal;
+	margin-bottom: $base_spacing_normal;
 	max-width: 100%;
 
 	img[class*="wp-image-"] {
@@ -37,9 +32,7 @@ object {
 .wp-caption-text {
 	text-align: center;
 }
-
 /* Galleries*/
-
 .gallery {
 	margin-bottom: $base_spacing_normal;
 }
