--- a/themes/montessori-theme/sass/_modules.scss
+++ b/themes/montessori-theme/sass/_modules.scss
@@ -1,7 +1,6 @@
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
-
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
@@ -26,14 +25,13 @@
 		text-decoration: none;
 		top: 5px;
 		width: auto;
-		z-index: 100000; /* Above WP toolbar. */
+		z-index: 100000;
+		/* Above WP toolbar. */
 	}
 }
-
 /*--------------------------------------------------------------
 # Alignments
 --------------------------------------------------------------*/
-
 .alignleft {
 	display: inline;
 	float: left;
@@ -43,14 +41,11 @@
 .alignright {
 	display: inline;
 	float: right;
-	margin-left:$base_spacing_normal;
+	margin-left: $base_spacing_normal;
 }
-
-
 /*--------------------------------------------------------------
 # Clearings
 --------------------------------------------------------------*/
-
 .clearfix {
 	clear: both;
 	content: "";
