--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -147,10 +147,10 @@ site-main {
     height: 160.50px;
     align-self: center;
 }
-img {
-    height: 100%;
-
-}
+// img {
+//     height: 100%;
+//
+// }
 
 // This for green circle btn
 .involved {
