--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1282,22 +1282,37 @@ div .secondary {
     color: #000;
     text-decoration: none; }
     .site-main .all-features .features-wrapper .features-flipper {
-      position: relative;
-      -webkit-transition: 1.9s;
-      -webkit-transform-style: preserve-3d;
-      -moz-transition: 1.9s;
-      -moz-transform-style: preserve-3d;
-      -o-transition: 1.9s;
-      -o-transform-style: preserve-3d;
-      transition: 1.9s;
-      transform-style: preserve-3d;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
-      -ms-flex-direction: row;
-          flex-direction: row; }
-      .site-main .all-features .features-wrapper .features-flipper:hover {
-        transform: rotateY(180deg);
-        cursor: pointer; }
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+      width: 200px;
+      height: 200px;
+      background-color: #AFF1D3;
+      margin-top: 20px;
+      display: flex;
+      display: -ms-flexbox;
+      -ms-flex-align: center;
+          align-items: center;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      position: relative; }
+      @media (min-width: 768px) {
+        .site-main .all-features .features-wrapper .features-flipper {
+          width: 300px;
+          height: 300px;
+          background-color: #AFF1D3;
+          -webkit-transition: 3s;
+          -webkit-transform-style: preserve-3d;
+          -moz-transition: 2s;
+          -moz-transform-style: preserve-3d;
+          -o-transition: 3s;
+          -o-transform-style: preserve-3d;
+          transition: 3s;
+          transform-style: preserve-3d;
+          border-radius: 10px; }
+          .site-main .all-features .features-wrapper .features-flipper:hover {
+            transform: rotateY(180deg); } }
       .site-main .all-features .features-wrapper .features-flipper .front {
         height: auto;
         text-align: center;
