finish nw program mobile and tablet size

--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -3,7 +3,7 @@
 .red-border-container{
 width: 90%;
 height: 160px;
-display: inline-block;
+display: inline-table;
 margin-left: 7.5%;
 padding-right: 9.4%;
 padding-left: 15px;
