--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1825,6 +1825,7 @@ h1,
 h2,
 h3 {
   font-family: "Asap", sans-serif;
+  line-height: 1.5rem;
   font-weight: normal; }
 
 h1 {
@@ -1832,8 +1833,7 @@ h1 {
   line-height: 2.625rem; }
 
 h2 {
-  font-size: 1.6rem;
-  line-height: 2.125rem; }
+  font-size: 1.6rem; }
 
 h3 {
   font-size: 1.4rem;
@@ -1845,7 +1845,7 @@ p {
   font-style: "Noto Sans", sans-serif; }
 
 .spcil p {
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   line-height: 2.5rem;
   font-style: "Noto Sans", sans-serif; }
 
@@ -1865,22 +1865,24 @@ p {
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 5.9375rem; }
   .nw-program .why-nw p {
-    display: block; }
+    display: block;
+    -ms-flex-negative: 5;
+        flex-shrink: 5; }
   .nw-program .nw-img {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center;
-    margin-top: 3.4375rem;
+    margin-top: 1.5625rem;
     margin-bottom: 1.875rem; }
-    @media (min-width: 768px) {
+    @media screen and (max-width: 768px) {
       .nw-program .nw-img {
         width: 50%;
         -ms-flex-item-align: center;
             -ms-grid-row-align: center;
             align-self: center; } }
 
-@media (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .nw-part1 {
     display: -ms-flexbox;
     display: flex;
@@ -1903,63 +1905,26 @@ p {
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 2rem; }
-    @media (min-width: 768px) {
-      .funding .funding-img,
-      .funding .money-spend-img {
-        margin-top: 5rem;
-        width: 80%; } }
-  @media (min-width: 768px) {
+    .funding .funding-img h2,
+    .funding .money-spend-img h2 {
+      text-align: left; }
+  @media screen and (max-width: 768px) {
     .funding .funding-img img {
       -ms-flex-positive: 1;
           flex-grow: 1;
       width: 120%; } }
-  @media (min-width: 768px) {
-    .funding .money-spend-img img {
-      padding-right: 4rem;
-      padding-left: .4rem; } }
-  .funding h2 {
-    text-align: center; }
-  @media (min-width: 768px) {
-    .funding .nw-part2 {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: row;
-          flex-direction: row;
-      -ms-flex-align: center;
-          align-items: center; }
-      .funding .nw-part2 .red-border-container {
-        width: 82%;
-        display: -ms-flexbox;
-        display: flex; } }
-  @media (min-width: 768px) {
-    .funding .nw-part3 {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-          align-items: center;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
-    .funding .money-spend-para {
-      -ms-flex-negative: 5;
-          flex-shrink: 5; } }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 1.875rem; }
-    @media (min-width: 768px) {
-      .funding .funding-btn {
-        -ms-flex-pack: end;
-            justify-content: flex-end; } }
     .funding .funding-btn .green-btn {
-      padding: 10px;
+      padding: 1rem;
       width: 44.666%;
+      -ms-flex-pack: center;
+          justify-content: center;
       margin-right: 2px; }
-      @media (min-width: 768px) {
-        .funding .funding-btn .green-btn {
-          padding: 1.2rem;
-          width: 18%; } }
 
 .school-list {
   display: -ms-flexbox;
@@ -1977,12 +1942,6 @@ p {
     .school-list .school-img .address .phone {
       font-weight: bolder; }
 
-@media (min-width: 768px) {
-  .preschools-list h1 {
-    width: 55%;
-    padding: 1.7rem;
-    border-top: solid 3px #4FC8A1; } }
-
 .enroll {
   border-top: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem;
@@ -1990,24 +1949,8 @@ p {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column; }
-  @media (min-width: 768px) {
-    .enroll .enrollment-wrap {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-direction: row;
-          flex-direction: row; }
-      .enroll .enrollment-wrap .guids {
-        -ms-flex-negative: 3.5;
-            flex-shrink: 3.5;
-        padding-right: 1rem; } }
   .enroll .enroll-info {
-    margin-top: 23rem; }
-    @media screen and (min-width: 768px) {
-      .enroll .enroll-info {
-        margin-top: 6rem; } }
-    @media (min-width: 768px) {
-      .enroll .enroll-info {
-        margin-top: 2rem; } }
+    margin-top: 3rem; }
   .enroll .enroll-block {
     max-width: 70%;
     display: -ms-flexbox;
@@ -2033,17 +1976,11 @@ p {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
+  display: flex; }
   .teacher-list h1 {
     width: 40%;
     padding: 1.7rem;
     border-top: solid 3px #4FC8A1; }
-  @media (min-width: 768px) {
-    .teacher-list {
-      -ms-flex-direction: column;
-          flex-direction: column; } }
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
@@ -2051,7 +1988,7 @@ p {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around; }
-    @media (min-width: 768px) {
+    @media screen and (max-width: 768px) {
       .teacher-list .teacher-grid {
         -ms-flex-direction: row;
             flex-direction: row; } }
@@ -2064,7 +2001,7 @@ p {
           flex-direction: column;
       -ms-flex-align: center;
           align-items: center; }
-      @media (min-width: 768px) {
+      @media screen and (max-width: 768px) {
         .teacher-list .teacher-grid .teacher-block {
           max-width: 990px;
           -ms-flex: 1;
@@ -2111,7 +2048,7 @@ p {
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
-        @media (min-width: 768px) {
+        @media screen and (max-width: 768px) {
           .teacher-list .teacher-grid .flip-container .back {
             width: 200px;
             height: 200px;
@@ -2131,7 +2068,7 @@ p {
         .teacher-list .teacher-grid .front {
           width: 190px;
           height: 190px; } }
-      @media (min-width: 768px) {
+      @media screen and (max-width: 768px) {
         .teacher-list .teacher-grid .back,
         .teacher-list .teacher-grid .flip-container,
         .teacher-list .teacher-grid .front {
@@ -2148,7 +2085,7 @@ p {
 .red-border-container {
   width: 90%;
   height: 160px;
-  display: inline-block;
+  display: inline-table;
   margin-left: 7.5%;
   padding-right: 9.4%;
   padding-left: 15px;
